<resources>
    <string name="app_name">Student Connect</string>
    <string name="search_hint">Search students...</string>
    <string name="filter_button">Filter</string>
    <string name="apply_filter_button">Apply Filter</string>
    <string name="select_branch">Select Branch</string>
    <string name="select_section">Select Section</string>
    <string name="select_year">Select Year</string>
</resources>
